--- a/components/contact.module.scss
+++ b/components/contact.module.scss
@@ -5,7 +5,7 @@
 }
 
 .content {
-  width: 80vw;
+  width: 90vw;
   margin: 0 auto;
 
   .addressContainer {
@@ -33,15 +33,6 @@
 
       a {
         padding: 0 10px;
-        .socialBtn {
-          transition: all 0.3s ease;
-          &:hover {
-            color: $on-color-primary;
-            background: $color-primary;
-            border: 2px solid $color-primary;
-            border-radius: 6px;
-          }
-        }
       }
     }
   }
@@ -59,5 +50,9 @@
 
 .submitBtn {
   margin-top: 10px;
-  float: right;
+}
+
+.areaLabel {
+  font-weight: $font-weight-bold;
+  font-size: $font-size-lg;
 }
