--- a/components/experience.module.scss
+++ b/components/experience.module.scss
@@ -1,5 +1,10 @@
 @import "../styles/variables";
 
+.content {
+  width: 90vw;
+  margin: auto;
+}
+
 .date {
   color: $on-color-dark-secondary;
 }
