--- a/components/ui/input.module.scss
+++ b/components/ui/input.module.scss
@@ -15,9 +15,9 @@
   border: 1px solid lightgray;
   border-radius: 6px;
   font-family: $font-secondary;
-  font-size: 1rem;
-  padding: 6px 10px;
+  font-size: $font-size-md;
+  line-height: $line-height-base;
+  padding: 0.5em 1em;
   display: block;
   width: 100%;
-  height: 100%;
 }
