--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -19,6 +19,7 @@ $font-secondary: "Ubuntu", sans-serif;
 
 $font-size-base: 1rem; // Assumes the browser default, typically `16px`
 $font-size-sm: $font-size-base * 0.875;
+$font-size-md: $font-size-base * 1.1;
 $font-size-lg: $font-size-base * 1.25;
 $font-size-xl: $font-size-base * 3;
 $font-size-xxl: $font-size-base * 4;
